治ったぜよぜよ

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <!-- iwithとは -->
 <div class="what_is_iwith">
   <div class="what_is_iwith_wrapper">
-    <p>branchどこいった</p>
+    <p>治ったーー</p>
   </div>
 </div>
 
