--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
 <!-- iwithとは -->
 <div class="what_is_iwith">
   <div class="what_is_iwith_wrapper">
-    <p>pushできてる？</p>
+    <h2>iwithって何してるの？</h2>
+    <p>アイウエオ</p>
   </div>
 </div>
 
