会社内容の記載

--- a/index.html
+++ b/index.html
@@ -51,10 +51,12 @@
 <!-- トップコンテンツ部分終了 -->
 
 <!-- iwithとは -->
-<div class="what_is_iwith">
+<div class="what_is_iwith" id="what_is_iwith">
   <div class="what_is_iwith_wrapper">
     <h2>iwithって何してるの？</h2>
-    <p>アイウエオ</p>
+     <h3>iwith2本の柱</h3>
+      <p>１.豊富な医療知識で医薬品・健康食品の相談やコンサルタント</p>
+      <p>２.it技術を用いたサービス開発・it技術の導入やコンサルタント</p>
   </div>
 </div>
 
