--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
   <meta charset="utf-8">
   <title>iwithホームページ</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://use.fontawesome.com/releases/v5.9.0/css/all.css" rel="stylesheet">
   <link rel="stylesheet" href="stylesheet.min.css">
   <link href="https://use.fontawesome.com/releases/v5.9.0/css/all.css" rel="stylesheet">
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/105/three.min.js"></script>
-
 </head>
 
 <body>
@@ -18,8 +17,10 @@
     <div class="header-container">
 
       <div class="header-logo clearfix">
-     　<img src="./image/iwith_logo.png" alt="アイウィズロゴ画像">
+      <a href="https://iwith.tech">
+       <img src="./image/iwith_logo.png" alt="アイウィズロゴ画像">
        <p>iwith合同会社</p>
+      </a>
      </div>
 
      <div class="header-modal">
@@ -28,8 +29,8 @@
 
      <div class="header-navigation">
        <div class="header-navigation-wrapper">
-         <a href="./index.html">ホーム</a><span>|</span>
-         <a href="./index.html">事業内容</a><span>|</span>
+         <a href="https://iwith.tech">ホーム</a><span>|</span>
+         <a href="#what_is_iwith">事業内容</a><span>|</span>
          <a href="./index.html">実績</a><span>|</span>
          <a href="./index.html">お問い合わせ</a><span>|</span>
          <a href="./index.html">会社概要</a>
@@ -63,6 +64,11 @@
 
 <!-- iwithとは終了 -->
 
+<!-- iwith実績 -->
+<div class="testtest">
+<div id="test">aiueo</div>
+</div>
+<!-- iwith実績終了 -->
 
 <div class="canvas">
  <canvas id="myCanvas"></canvas>
@@ -73,11 +79,11 @@
   <!-- モーダル部分 -->
   <div class="modal">
     <div class="modal-wrapper">
-      <div class="modal-parts"><a href="./index.html">ホーム</a></div>
-      <div class="modal-parts"><a href="./index.html">事業内容</div></a>
+      <div class="modal-parts"><a href="https://iwith.tech">ホーム</a></div>
+      <div class="modal-parts"><a href="#what_is_iwith"><span id="what_is_iwith" class="link-t-a"></span>事業内容</div></a>
       <div class="modal-parts"><a href="./index.html">実績</div></a>
       <div class="modal-parts"><a href="./index.html">お問い合わせ</div></a>
-      <div class="modal-parts"><a href="./index.html">会社概要</div></a>
+      <div class="modal-parts"><a href="./test.html">会社概要</div></a>
     </div>
 
   </div>
