レスポンシブ変更

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 <!-- ヘッダー部分　-->
   <div class="header">
     <div class="header-container">
-
       <div class="header-logo clearfix">
       <a href="https://iwith.tech">
        <img src="./image/iwith_logo.png" alt="アイウィズロゴ画像">
@@ -43,6 +42,19 @@
   </div>
   <!-- ヘッダー部分終了 -->
 
+  <!-- モーダル部分 -->
+  <div class="modal">
+    <div class="modal-wrapper">
+      <div class="modal-parts"><a href="https://iwith.tech">ホーム</a></div>
+      <div class="modal-parts"><a href="#what_is_iwith">事業内容</div></a>
+      <div class="modal-parts"><a href="./index.html">実績</div></a>
+      <div class="modal-parts"><a href="./index.html">お問い合わせ</div></a>
+      <div class="modal-parts"><a href="./test.html">会社概要</div></a>
+    </div>
+
+  </div>
+  <!-- モーダル部分終了 -->
+
   <!-- トップコンテンツ部分 -->
 <div class="top-contents">
  <div class="top-contents-wrapper">
@@ -52,12 +64,12 @@
 <!-- トップコンテンツ部分終了 -->
 
 <!-- iwithとは -->
-<div class="what_is_iwith" id="what_is_iwith">
+<div class="what_is_iwith anchor" id="what_is_iwith">
   <div class="what_is_iwith_wrapper">
     <h2>iwithって何してるの？</h2>
      <h3>iwith2本の柱</h3>
-      <p>１.豊富な医療知識で医薬品・健康食品の相談やコンサルタント</p>
-      <p>２.it技術を用いたサービス開発・it技術の導入やコンサルタント</p>
+      <p>１.豊富な医療知識で医薬品<span class="kaigyou"></span><span class="what_is_iwith_point">・</span>健康食品の相談やコンサルタント</p>
+      <p>２.it技術を用いたサービス開発<span class="kaigyou"></span><span class="what_is_iwith_point">・</span>it技術の導入やコンサルタント</p>
   </div>
 </div>
 
@@ -73,20 +85,6 @@
 <div class="canvas">
  <canvas id="myCanvas"></canvas>
 </div>
-
-
-
-  <!-- モーダル部分 -->
-  <div class="modal">
-    <div class="modal-wrapper">
-      <div class="modal-parts"><a href="https://iwith.tech">ホーム</a></div>
-      <div class="modal-parts"><a href="#what_is_iwith"><span id="what_is_iwith" class="link-t-a"></span>事業内容</div></a>
-      <div class="modal-parts"><a href="./index.html">実績</div></a>
-      <div class="modal-parts"><a href="./index.html">お問い合わせ</div></a>
-      <div class="modal-parts"><a href="./test.html">会社概要</div></a>
-    </div>
-
-  </div>
 
 <script src="js/script.js"></script>
 
