iwith　performance part html,sass

--- a/index.html
+++ b/index.html
@@ -72,19 +72,44 @@
       <p>２.it技術を用いたサービス開発<span class="kaigyou"></span><span class="what_is_iwith_point">・</span>it技術の導入やコンサルタント</p>
   </div>
 </div>
-
-
 <!-- iwithとは終了 -->
 
 <!-- iwith実績 -->
+<div class="iwith_performance">
+  <div class="iwith_performance_wrapper">
+    <h2>iwith実績</h2>
+      <div class="iwith_performances">
+        <img src="./image/iwith_performance_igaku.png" alt=”調布市医学会資料” class="performance_images">
+        <p>調布市医学会講演</p>
+      </div>
+      <div class="iwith_performances">
+        <img src="./image/iwith_performance_charme.jpg" alt=”バンケット会社シャルムホームページ” class="performance_images">
+        <p>バンケット会社シャルムホームページ</p>
+      </div>
+      <div class="iwith_performances">
+        <img src="" alt=在庫管理システムの構築 class="performance_images">
+        <p>在庫管理システムの構築</p>
+      </div>
+
+  </div>
+</div>
+
+
+<!-- iwith実績終了 -->
+
+<!-- test領域 -->
+
+
 <div class="testtest">
 <div id="test">aiueo</div>
 </div>
-<!-- iwith実績終了 -->
 
 <div class="canvas">
  <canvas id="myCanvas"></canvas>
 </div>
+
+<!-- test領域終了 -->
+
 
 <script src="js/script.js"></script>
 
