iwith performance responsive changing

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
        <div class="header-navigation-wrapper">
          <a href="https://iwith.tech">ホーム</a><span>|</span>
          <a href="#what_is_iwith">事業内容</a><span>|</span>
-         <a href="./index.html">実績</a><span>|</span>
+         <a href="#iwith_performance">実績</a><span>|</span>
          <a href="./index.html">お問い合わせ</a><span>|</span>
          <a href="./index.html">会社概要</a>
        </div>
@@ -47,7 +47,7 @@
     <div class="modal-wrapper">
       <div class="modal-parts"><a href="https://iwith.tech">ホーム</a></div>
       <div class="modal-parts"><a href="#what_is_iwith">事業内容</div></a>
-      <div class="modal-parts"><a href="./index.html">実績</div></a>
+      <div class="modal-parts"><a href="#iwith_performance">実績</div></a>
       <div class="modal-parts"><a href="./index.html">お問い合わせ</div></a>
       <div class="modal-parts"><a href="./test.html">会社概要</div></a>
     </div>
@@ -75,20 +75,20 @@
 <!-- iwithとは終了 -->
 
 <!-- iwith実績 -->
-<div class="iwith_performance">
+<div class="iwith_performance" id="iwith_performance">
   <div class="iwith_performance_wrapper">
     <h2>iwith実績</h2>
       <div class="iwith_performances">
+        <p>~調布市医学会講演~</p>
         <img src="./image/iwith_performance_igaku.png" alt=”調布市医学会資料” class="performance_images">
-        <p>調布市医学会講演</p>
       </div>
       <div class="iwith_performances">
-        <img src="./image/iwith_performance_charme.jpg" alt=”バンケット会社シャルムホームページ” class="performance_images">
-        <p>バンケット会社シャルムホームページ</p>
+        <p>~バンケット会社ホームページ~</p>
+        <img src="./image/iwith_performance_charme.png" alt=”バンケット会社シャルムホームページ” class="performance_images">
       </div>
       <div class="iwith_performances">
-        <img src="" alt=在庫管理システムの構築 class="performance_images">
-        <p>在庫管理システムの構築</p>
+        <p>~在庫管理システムの構築~</p>
+        <img src="./image/iwith_taguchisanngyou_sample2.png" alt=”在庫管理システム” class="performance_images">
       </div>
 
   </div>
