iwith performance responsive about text-contents

--- a/index.html
+++ b/index.html
@@ -76,19 +76,33 @@
 
 <!-- iwith実績 -->
 <div class="iwith_performance" id="iwith_performance">
+      <h2>iwith実績例</h2>
   <div class="iwith_performance_wrapper">
-    <h2>iwith実績</h2>
+
       <div class="iwith_performances">
-        <p>~調布市医学会講演~</p>
-        <img src="./image/iwith_performance_igaku.png" alt=”調布市医学会資料” class="performance_images">
+        <h3>~調布市医学会講演~</h3>
+        <div class="performance_images">
+          <img src="./image/iwith_performance_igaku.png" alt=”調布市医学会資料”>
+        </div>
+            <p class="ex_images">アイウエオ書きくけ。太刀つてと。はひふふえh。</p>
       </div>
+
       <div class="iwith_performances">
-        <p>~バンケット会社ホームページ~</p>
-        <img src="./image/iwith_performance_charme.png" alt=”バンケット会社シャルムホームページ” class="performance_images">
+        <h3>~シャルムホームページ~</h3>
+        <a href="https://www.charme.jp/">
+        <div class="performance_images">
+          <img src="./image/iwith_performance_charme.png" alt=”バンケット会社シャルムホームページ”>
+       </div>
+       </a>
+        <p class="ex_images">aiuaiueodfi gvnadfffffffffdi</p>
       </div>
+
       <div class="iwith_performances">
-        <p>~在庫管理システムの構築~</p>
-        <img src="./image/iwith_taguchisanngyou_sample2.png" alt=”在庫管理システム” class="performance_images">
+        <h3>~在庫管理システムの構築~</h3>
+        <div class="performance_images">
+          <img src="./image/iwith_taguchisanngyou_sample2.png" alt=”在庫管理システム”>
+        </div>
+          <p class="ex_images">aiueodfi gvnaiueo dfigvna iueodfigvnai</p>
       </div>
 
   </div>
