--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="header">
     <div class="header-container">
       <div class="header-logo clearfix">
-      <a href="https://iwith.tech">
+      <a href="./index.html">
        <img src="./image/iwith_logo.png" alt="アイウィズロゴ画像">
        <p>iwith合同会社</p>
       </a>
@@ -28,10 +28,10 @@
 
      <div class="header-navigation">
        <div class="header-navigation-wrapper">
-         <a href="https://iwith.tech">ホーム</a><span>|</span>
+         <a href="./index.html">ホーム</a><span>|</span>
          <a href="#what_is_iwith">事業内容</a><span>|</span>
          <a href="#iwith_performance">実績</a><span>|</span>
-         <a href="./index.html">お問い合わせ</a><span>|</span>
+         <a href="./ask.html">お問い合わせ</a><span>|</span>
          <a href="./index.html">会社概要</a>
        </div>
 
@@ -45,10 +45,10 @@
   <!-- モーダル部分 -->
   <div class="modal">
     <div class="modal-wrapper">
-      <div class="modal-parts"><a href="https://iwith.tech">ホーム</a></div>
+      <div class="modal-parts"><a href="./index.html">ホーム</a></div>
       <div class="modal-parts"><a href="#what_is_iwith">事業内容</div></a>
       <div class="modal-parts"><a href="#iwith_performance">実績</div></a>
-      <div class="modal-parts"><a href="./index.html">お問い合わせ</div></a>
+      <div class="modal-parts"><a href="./ask.html">お問い合わせ</div></a>
       <div class="modal-parts"><a href="./test.html">会社概要</div></a>
     </div>
 
@@ -84,7 +84,7 @@
         <div class="performance_images">
           <img src="./image/iwith_performance_igaku.png" alt=”調布市医学会資料”>
         </div>
-            <p class="ex_images">アイウエオ書きくけ。太刀つてと。はひふふえh。</p>
+            <p class="ex_images">調布市医学会で健康食品の<span class="p_kaigyou"></span>評価の仕方と医薬品の相互作用<span class="p_kaigyou"></span>について講演。</p>
       </div>
 
       <div class="iwith_performances">
@@ -94,7 +94,7 @@
           <img src="./image/iwith_performance_charme.png" alt=”バンケット会社シャルムホームページ”>
        </div>
        </a>
-        <p class="ex_images">aiuaiueodfi gvnadfffffffffdi</p>
+        <p class="ex_images">バンケット会社<span class="p_kaigyou"></span>株式会社シャルムの会社<span class="p_kaigyou"></span>ホームページの作成</p>
       </div>
 
       <div class="iwith_performances">
@@ -102,21 +102,29 @@
         <div class="performance_images">
           <img src="./image/iwith_taguchisanngyou_sample2.png" alt=”在庫管理システム”>
         </div>
-          <p class="ex_images">aiueodfi gvnaiueo dfigvna iueodfigvnai</p>
+          <p class="ex_images">MicrosoftのAccessを用いた<span class="p_kaigyou"></span>在庫管理・請求書・明細書の<span class="p_kaigyou"></span>管理システムの構築</p>
       </div>
-
-  </div>
+    </div>
+    <p>上記以外にもwordpress等でのホームページ作成<span class="p_p_kaigyou"></span>など非公開案件実績あり。</p>
 </div>
 
 
 <!-- iwith実績終了 -->
 
+<!-- iwith vision -->
+
+
+
+<!-- iwith vision終了 -->
+
+
+
 <!-- test領域 -->
 
 
-<div class="testtest">
+<!--<div class="testtest">
 <div id="test">aiueo</div>
-</div>
+</div>-->
 
 <div class="canvas">
  <canvas id="myCanvas"></canvas>
