--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
          <a href="./index.html">ホーム</a><span>|</span>
          <a href="#what_is_iwith">事業内容</a><span>|</span>
          <a href="#iwith_performance">実績</a><span>|</span>
+         <a href="#iwith_vision">ビジョン</a><span>|</span>
          <a href="./ask.html">お問い合わせ</a><span>|</span>
-         <a href="./index.html">会社概要</a>
+         <a href="#company-summary">会社概要</a>
        </div>
 
 
@@ -48,8 +49,9 @@
       <div class="modal-parts"><a href="./index.html">ホーム</a></div>
       <div class="modal-parts"><a href="#what_is_iwith">事業内容</div></a>
       <div class="modal-parts"><a href="#iwith_performance">実績</div></a>
+      <div class="modal-parts"><a href="#iwith_vision">ビジョン</div></a>
       <div class="modal-parts"><a href="./ask.html">お問い合わせ</div></a>
-      <div class="modal-parts"><a href="./test.html">会社概要</div></a>
+      <div class="modal-parts"><a href="#company-summary">会社概要</div></a>
     </div>
 
   </div>
@@ -84,7 +86,7 @@
         <div class="performance_images">
           <img src="./image/iwith_performance_igaku.png" alt=”調布市医学会資料”>
         </div>
-            <p class="ex_images">調布市医学会で健康食品の<span class="p_kaigyou"></span>評価の仕方と医薬品の相互作用<span class="p_kaigyou"></span>について講演。</p>
+            <p class="ex_images">調布市医学会で健康食品の<span class="p_kaigyou"></span>評価の仕方と医薬品の相互作用<span class="p_kaigyou"></span>について講演</p>
       </div>
 
       <div class="iwith_performances">
@@ -112,17 +114,55 @@
 <!-- iwith実績終了 -->
 
 <!-- iwith vision -->
+<div class="iwith-vision" id="iwith_vision">
+  <h2>iwithの目指す場所</h2>
+    <div class="iwith-vision-wrapper">
+    <p>　iwithはit技術を用いてビジネスの問題解決や、ちょっとしたit周りのトラブルなどをきめ細やかに解決していきます。それと並行して、皆様の健康を支える医療サービスの自社開発に取り組んでいきます。</p>
+    <span class="p_kaigyou"></span><p>　働き方にも柔軟な制度を導入します。年齢・場所・人種問わずやる気のある人に自己成長をしながら働いてもらいます。リモートワークの推進とその環境の提供や、フレックス制度の導入、雇用形態もその人に合わせて考慮します。</p>
+    </div>
 
-
+</div>
 
 <!-- iwith vision終了 -->
+
+<!-- iwith 事業内容開始 -->
+  <div class="company-summary" id="company-summary">
+    <div class="company-summary-wrapper">
+    <h3>会社概要</h3>
+    <table class="summary-table">
+    <tr class="summary-tr">
+      <th>会社名</th>
+      <td>iwith合同会社</td>
+    </tr>
+    <tr class="summary-tr">
+      <th>所在地</th>
+      <td>〒132-0024<span class="p_kaigyou"></span>東京都江戸川区一之江<span class="p_kaigyou"></span>７丁目３２−７</td>
+    </tr>
+    <tr class="summary-tr">
+      <th>連絡先</th>
+      <td>Email: iwith@iwith.tech<span class="p_kaigyou"></span>電話番号: 080-5083-6906</td>
+    </tr>
+    <tr class="summary-tr">
+      <th>設立日</th>
+      <td>2017年6月１日</td>
+    </tr>
+    <tr class="summary-tr">
+      <th>代表者</th>
+      <td>今泉　隼人</td>
+    </tr>
+  </table>
+</div>
+</div>
+
+<!-- iwith 事業内容終了 -->
+
 
 
 
 <!-- test領域 -->
 
 
-<!--<div class="testtest">
+<!--<div class="testtest"
 <div id="test">aiueo</div>
 </div>-->
 
