--- a/ask.html
+++ b/ask.html
@@ -31,6 +31,7 @@
          <a href="./index.html">ホーム</a><span>|</span>
          <a href="./index.html#what_is_iwith">事業内容</a><span>|</span>
          <a href="./index.html#iwith_performance">実績</a><span>|</span>
+         <a href="./index.html#iwith_vision">ビジョン</a><span>|</span>
          <a href="./index.html">会社概要</a>
        </div>
 
@@ -47,6 +48,7 @@
       <div class="modal-parts"><a href="./index.html">ホーム</a></div>
       <div class="modal-parts"><a href="./index.html#what_is_iwith">事業内容</div></a>
       <div class="modal-parts"><a href="./index.html#iwith_performance">実績</div></a>
+      <div class="modal-parts"><a href="./index.html#iwith_vision">ビジョン</div></a>
       <div class="modal-parts"><a href="./test.html">会社概要</div></a>
     </div>
 
