add ceoPicture, footer

--- a/ask.html
+++ b/ask.html
@@ -32,7 +32,7 @@
          <a href="./index.html#what_is_iwith">事業内容</a><span>|</span>
          <a href="./index.html#iwith_performance">実績</a><span>|</span>
          <a href="./index.html#iwith_vision">ビジョン</a><span>|</span>
-         <a href="./index.html">会社概要</a>
+         <a href="./index.html#company-summary">会社概要</a>
        </div>
 
 
@@ -96,9 +96,33 @@
     </p>
   </form>
 </div>
-<div class="ask-form">
+</div>
 
 <!-- iwith 問い合わせ 終了-->
+<!-- iwith footer-->
+
+<div class="footer">
+  <div class="footer-wrapper">
+    <div class="footer-menu1 footers">
+     <ul>
+       <li><a href="./index.html">top</a></li>
+       <li><a href="./index.html#what_is_iwith">事業内容</a></li>
+       <li><a href="./index.html#iwith_performance">実績</a></li>
+    </ul>
+    </div>
+    <div class="footer-menu2 footers">
+     <ul>
+      <li><a href="./index.html#iwith_vision">ビジョン</a></li>
+      <li><a href="./ask.html">お問い合わせ</a></li>
+      <li><a href="./index.html#company-summary">会社概要</a></li>
+     </ul>
+    </div>
+    <div class="right footers">
+      <p>iwith LLC. All rights reserved @2020</p>
+    </div>
+  </div>
+</div>
+<!-- iwith footer-->
 
 
 <!-- test領域 -->
