--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <!-- iwithとは終了 -->
 
 <!-- iwith実績 -->
-<div class="iwith_performance" id="iwith_performance">
+<div class="iwith_performance head-design" id="iwith_performance">
       <h2>iwith実績例</h2>
   <div class="iwith_performance_wrapper">
 
@@ -114,8 +114,8 @@
 <!-- iwith実績終了 -->
 
 <!-- iwith vision -->
-<div class="iwith-vision" id="iwith_vision">
-  <h2>iwithの目指す場所</h2>
+<div class="iwith-vision head-design" id="iwith_vision">
+  <h2 class="head-design">iwithの目指す場所</h2>
     <div class="iwith-vision-wrapper">
     <p>　iwithはit技術を用いてビジネスの問題解決や、ちょっとしたit周りのトラブルなどをきめ細やかに解決していきます。それと並行して、皆様の健康を支える医療サービスの自社開発に取り組んでいきます。</p>
     <span class="p_kaigyou"></span><p>　働き方にも柔軟な制度を導入します。年齢・場所・人種問わずやる気のある人に自己成長をしながら働いてもらいます。リモートワークの推進とその環境の提供や、フレックス制度の導入、雇用形態もその人に合わせて考慮します。</p>
@@ -126,9 +126,9 @@
 <!-- iwith vision終了 -->
 
 <!-- iwith 事業内容開始 -->
-  <div class="company-summary" id="company-summary">
+  <div class="company-summary head-design" id="company-summary">
     <div class="company-summary-wrapper">
-    <h3>会社概要</h3>
+    <h2 class="head-design">会社概要</h2>
     <table class="summary-table">
     <tr class="summary-tr">
       <th>会社名</th>
@@ -153,10 +153,49 @@
   </table>
 </div>
 </div>
-
 <!-- iwith 事業内容終了 -->
 
+<!-- 代表経歴開始 -->
+<div class="ceo-intro">
+  <div class="ceo-intro-wrapper">
+    <div class="ceo-picture">
+      <img src="image/selfPicture.jpg" alt="代表写真">
+    </div>
+    <div class="ceo-picture-comment">
+      <h3>代表紹介</h3>
+      <p>薬剤師・エンジニア。大手ドラックストア・調剤薬局で薬剤師として勤務。並行してitシステムの受託業務を行う。2017年iwith合同会社設立。趣味はブレイクダンス。
+      </p>
+    </div>
+  </div>
+</div>
 
+<!-- 代表経歴終了 -->
+
+<!-- iwith footer 開始 -->
+<div class="footer">
+  <div class="footer-wrapper">
+    <div class="footer-menu1 footers">
+     <ul>
+       <li><a href="./index.html">top</a></li>
+       <li><a href="#what_is_iwith">事業内容</a></li>
+       <li><a href="#iwith_performance">実績</a></li>
+    </ul>
+    </div>
+    <div class="footer-menu2 footers">
+     <ul>
+      <li><a href="#iwith_vision">ビジョン</a></li>
+      <li><a href="./ask.html">お問い合わせ</a></li>
+      <li><a href="#company-summary">会社概要</a></li>
+     </ul>
+    </div>
+    <div class="right footers">
+      <p>iwith LLC. All rights reserved @2020</p>
+    </div>
+  </div>
+</div>
+
+
+<!-- iwith footer 終了 -->
 
 
 <!-- test領域 -->
