--- a/ask.html
+++ b/ask.html
@@ -132,14 +132,11 @@
 <div id="test">aiueo</div>
 </div>-->
 
-<div class="canvas">
- <canvas id="myCanvas"></canvas>
-</div>
 
 <!-- test領域終了 -->
 
 
-<script src="js/script.js"></script>
+<script src="js/jquery.js"></script>
 
 </body>
 
