--- a/ask.html
+++ b/ask.html
@@ -92,7 +92,8 @@
       </tr>
     </table>
     <p align="center">
-      <input type="submit" value="確認" class="btn">　<input type="reset" value="リセット" class="btn">
+      <input type="submit" value="確認" class="btn">
+      <input type="reset" value="リセット" class="btn">
     </p>
   </form>
 </div>
