--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
   <link href="https://use.fontawesome.com/releases/v5.9.0/css/all.css" rel="stylesheet">
   <link rel="stylesheet" href="stylesheet.min.css">
   <link href="https://use.fontawesome.com/releases/v5.9.0/css/all.css" rel="stylesheet">
-  <script type="text/javascript" src="./js/three.js"></script>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script type="text/javascript" src="js/jquery.js"></script>
+  <script type="text/javascript" src="js/three.js"></script>
   <!--<script type="text/javascript" src="./js/stats.js"></script>-->
   <!--<script type="text/javascript" src="./js/dat.gui.js"></script>-->
+  <script src="//kitchen.juicer.cc/?color=LPHADFETMKs=" async></script>
 
 </head>
 
@@ -23,18 +26,17 @@
 
   <script type="text/javascript">
 
-
-
   function init() {
 
-    scene = new THREE.Scene();
+    const scene = new THREE.Scene();
 
-    camera = new THREE.PerspectiveCamera(80,window.innerWidth/window.innerHeight,0.1,1000);
+    const camera = new THREE.PerspectiveCamera(80,window.innerWidth/window.innerHeight,0.1,1000);
 
-    camera.position.x = 10;
-    camera.position.y = 10;
-    camera.position.z = 10;
-    camera.lookAt(scene.position);
+    camera.position.x = -10;
+    camera.position.y = 15;
+    camera.position.z = 25;
+    camera.lookAt(new THREE.Vector3(0, 0, 0));
+
 
     const renderer = new THREE.WebGLRenderer();
     renderer.setClearColor(new THREE.Color(0x000000));
@@ -47,11 +49,6 @@
     const sphere = createMesh(new THREE.SphereGeometry(8, 40, 40));
 
     scene.add(sphere);
-
-    camera.position.x = -10;
-    camera.position.y = 15;
-    camera.position.z = 25;
-    camera.lookAt(new THREE.Vector3(0, 0, 0));
 
     const ambi = new THREE.AmbientLight(0x181818);
     scene.add(ambi);
@@ -68,7 +65,7 @@
 
     let knot;
 
-    var controls = new function() {
+    const controls = new function() {
 
       this.radius = 40;
       this.tube = 0;
@@ -80,21 +77,20 @@
       this.rotate = true;
 
       this.redraw = function () {
-                // remove the old plane
-                if(knot) scene.remove(knot);
-                // create a new one
-                var geom = new THREE.TorusKnotGeometry(controls.radius, controls.tube, Math.round(controls.radialSegments), Math.round(controls.tubularSegments), Math.round(controls.p), Math.round(controls.q));
 
-                if (controls.asParticles) {
-                    knot = createPoints(geom);
-                } else {
-                    knot = createMesh(geom);
-                }
+      if(knot) scene.remove(knot);
+      var geom = new THREE.TorusKnotGeometry(controls.radius, controls.tube, Math.round(controls.radialSegments), Math.round(controls.tubularSegments), Math.round(controls.p), Math.round(controls.q));
+
+      if (controls.asParticles) {
+        knot = createPoints(geom);
+      } else {
+        knot = createMesh(geom);
+      }
       scene.add(knot);
     }
   }
 
-        controls.redraw();
+    controls.redraw();
 
 
 
@@ -136,12 +132,9 @@
         }
 
         function createMesh(geom) {
-
-            // assign two materials
             const meshMaterial = new THREE.MeshNormalMaterial({});
             meshMaterial.side = THREE.DoubleSide;
 
-            // create a multimaterial
             const mesh = THREE.SceneUtils.createMultiMaterialObject(geom, [meshMaterial]);
 
             return mesh;
@@ -161,10 +154,7 @@
 
             planetMaterial.normalMap = normalTexture;
             planetMaterial.map = planetTexture;
-//               planetMaterial.shininess = 150;
 
-
-            // create a multimaterial
             const mesh = THREE.SceneUtils.createMultiMaterialObject(geomsp, [planetMaterial]);
 
             return mesh;
@@ -382,19 +372,6 @@
   </div>
 </div>
 <!-- iwith footer 終了 -->
-
-
-<!-- test領域 -->
-
-
-<!--<div class="testtest"
-<div id="test">aiueo</div>
-</div>-->
-
-<!-- test領域終了 -->
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-<script type="text/javascript" src="js/jquery.js"></script>
-
 
 </body>
 
