--- a/ask.html
+++ b/ask.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+
+  <div id="wrapper">
 <!-- ヘッダー部分　-->
   <div class="header">
     <div class="header-container">
@@ -102,7 +104,7 @@
 <!-- iwith 問い合わせ 終了-->
 <!-- iwith footer-->
 
-<div class="footer">
+<div class="footer" id="footer">
   <div class="footer-wrapper">
     <div class="footer-menu1 footers">
      <ul>
@@ -138,7 +140,7 @@
 
 
 <script src="js/jquery.js"></script>
-
+</div>
 </body>
 
 </html>
